# NHAI-Hackathon-7.0

./: .env.example  .gitignore  DEMO_DUMMY_USERS.md  LICENSE  NHAI_NFA_Technical_Documentation.html  README.md  deploy.sh  ecosystem.config.js  implementation_phases.md  worker_attendance_phases.md
.claude/: settings.json
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_attendance.py  002_add_admin_worker_punch.py  003_widen_aadhar_hash.py
backend/app/: config.py  main.py
backend/app/auth/: jwt.py  play_integrity.py
backend/app/db/: session.py
backend/app/models/: admin.py  attendance.py  punch_event.py  worker.py
backend/app/routes/: admin.py  attendance.py  auth.py  punch_events.py  worker_auth.py  workers.py
backend/app/security/: middleware.py
backend/app/utils/: aadhar.py
backend/dashboards/: nhai_hq_dashboard.json
backend/ml/: convert_edgeface.py  convert_minifasnet.py  convert_yunet.py  quantize_finetuned.py  seed_indian_dataset.py  seed_templates.py
backend/notebooks/: eval_dfw.ipynb  finetune_edgeface.ipynb
backend/scripts/: seed_demo_data.py  setup_local_pg.sh  sign_and_upload.py
backend/tests/: conftest.py  test_attendance.py
deliverables_docs_to_NHAI/: APK_LINK.txt
docs/: ARCHITECTURE.md  BENCHMARKS.md  NHAI_HACKATHON_STRATEGY.html  NHAI_HACKATHON_STRATEGY.md  NHAI_HACKATHON_SUBMISSION_BUNDLE.html  pitch_deck.md  winning_edge_strategy.md
final_submission_docs/: DEMO_SCRIPT.md  INTEGRATION_GUIDE.md  (+6 more)
(+167 files in other folders)
